# Plagiarism-Detection

./: main.py  pyproject.toml
Templates/: index.html  report.html
